=========
Changelog
=========

1.0b19 (unreleased)
===================

- Allow specifying alternate find-links in requirements.txt

- Remove remnants of the buildout component's ``extends`` option.

- Improve error logging.


1.0b18 (2014-03-31)
===================

- Introduce environment option ``connect_mode``, either 'ssh+sudo' (default) or
  plain 'ssh'.

- Improve update code: existing installations would not update cleanly to a new
  version due to wrong use of pkg_resources API.
  Existing installations need to be cleaned manually. :/

- Archive: recognize ``.tar.xz`` files and extract them with ``tar``.

- Fix bug in CMMI verify that would always raise UpdateNeeded due to a path
  mismatch (#13145).

- Component.cmd() now performs expand() on the given command by
  default. Saves typing:

    self.cmd('rm -rf {{component.workdir}}')

  instead of 

    self.cmd(self.expand('rm -rf {{component.workdir}}'))

- File component: apply character encoding when reading and writing files.
  (#13165)

- Mercurial clone: changed update behaviour yet again: unless configured
  differently, always achieve target state, even by losing uncommitted changes.

- Allow unnamed access to the last added/ored component using the 
  'self._' attribute:

  def configure(self):
      self += Download(...)
      self += Extract(self._.target)


1.0b17 (2013-12-06)
===================

- Mercurial clone: refuse to update if there are uncommitted changes or
  outgoing changesets.

- Mercurial clone: added an option to avoid updating existing clones, which is
  often desirable during development.


1.0b16 (2013-11-29)
===================

- Improve the bootstrap/upgrade fix for #13049: the bootstrap template needed a
  second improvement.

1.0b15 (2013-11-29)
===================

- Try to fix #13049 - will only work once the dev version is already at least
  at b15. Not sure whether it really does the job, though. Hard to test.
