@@ -1,5 +1,6 @@
 # Generated by buildout
 MarkupSafe==0.15
 Jinja2==2.7
+requests==2.2.1
 setuptools==1.1.6
 execnet==1.1
