@@ -44,3 +44,4 @@ zope.cachedescriptors = 4.0.0
 zope.exceptions = 4.0.6
 zope.interface = 4.0.5
 zope.testrunner = 4.4.0
+requests = 2.2.1
